--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -48,7 +48,7 @@
                                                     </h3>
                                                 </div>
                                             </td>
-                                            <td class="price-col">₹<%= product.product.price %></td>
+                                            <td class="price-col"><del>₹<%= product.product.price %></del></td>
                                             <td class="price-col">₹<%= product.product.discount %></td>
                                             <td class="quantity-col">
                                                 <div class="cart-product-quantity">
