--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -11,7 +11,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Shop</a></li>
+                <li class="breadcrumb-item"><a href="/cart">Cart</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Checkout</li>
             </ol>
         </div><!-- End .container -->
@@ -26,33 +26,31 @@
                         <label for="checkout-discount-input" class="text-truncate">Have a coupon? <span>Click here to enter your code</span></label>
                     </form>
                 </div><!-- End .checkout-discount -->
-                <form action="#">
+                <form id="checkout-form" >
                     <div class="row">
-                        <div class="col-lg-9">
-                            <% addresses.forEach((address) => {%>
-                                <div class="card card-dashboard">
-                                    <!-- <div class="d-flex" style="justify-content: end;">
-                                        <a class="pr-3" href="/delete-address/<%= address._id %>"><i class="icon-close"></i></a>
-                                    </div> -->
-                                    <div class="card-body">
-                                        
-                                        <h3 class="card-title">Billing Address</h3><!-- End .card-title -->
-                                
-                                        <p><span class="text-primary">Name:</span> <%= address.user.name %></p>
-                                        <p><span class="text-primary">BuildingName:</span> <%= address.buildingName %></p>
-                                        <p><span class="text-primary">Mobile No:</span> <%= address.mobile %></p>
-                                        <p><span class="text-primary">District:</span> <%= address.district %></p>
-                                        <p><span class="text-primary">City:</span> <%= address.city %></p>
-                                        <p><span class="text-primary">State:</span> <%= address.state %></p>
-                                        <p><span class="text-primary">Pin Code:</span> <%= address.pincode %></p>
-                                        <br>
-                                        <p><a href="/edit-address/<%= address._id %>" >Edit Address <i class="icon-edit"></i></a></p> 
-                                    </div><!-- End .card-body -->
-                                </div><!-- End .card-dashboard -->
-                            <%}); %>
-
-                        </div><!-- End .col-lg-9 -->
-                        <aside class="col-lg-3">
+                        <div class="col-lg-8 d-flex ">
+                                <% addresses.forEach((address) => {%>
+                                    <div class="col-lg-4">
+                                    <div class="card card-dashboard ">   
+                                        <div class="card-body ">
+                                            <input type="radio" name="address" value="<%= address._id %>" required>
+                                            <h3 class="card-title">Billing Address</h3><!-- End .card-title -->
+                                    
+                                            <p><span class="text-primary">Name:</span> <%= address.user.name %></p>
+                                            <p><span class="text-primary">BuildingName:</span> <%= address.buildingName %></p>
+                                            <p><span class="text-primary">Mobile No:</span> <%= address.mobile %></p>
+                                            <p><span class="text-primary">District:</span> <%= address.district %></p>
+                                            <p><span class="text-primary">City:</span> <%= address.city %></p>
+                                            <p><span class="text-primary">State:</span> <%= address.state %></p>
+                                            <p><span class="text-primary">Pin Code:</span> <%= address.pincode %></p>
+                                            <br>
+                                            <p><a href="/edit-address/<%= address._id %>" >Edit Address <i class="icon-edit"></i></a></p> 
+                                        </div><!-- End .card-body -->
+                                    </div><!-- End .card-dashboard -->
+                                </div>
+                                <%}); %>
+                        </div><!-- End .col-lg-8 -->
+                        <aside class="col-lg-4">
                             <div class="summary">
                                 <h3 class="summary-title">Your Order</h3><!-- End .summary-title -->
 
@@ -60,66 +58,42 @@
                                     <thead>
                                         <tr>
                                             <th>Product</th>
+                                            <th class="pl-4">Qty</th>
                                             <th>Total</th>
                                         </tr>
                                     </thead>
 
                                     <tbody>
+                                        <% cart[0].products.forEach(product => { %>
+                                        
                                         <tr>
-                                            <td><a href="#">Beige knitted elastic runner shoes</a></td>
-                                            <td>$84.00</td>
+                                            <td><a href="#"><%= product.product.name %></a></td>
+                                            <td class="pl-5"><%= product.quantity %></td>
+                                            <td>₹<%= product.subtotal %></td>
                                         </tr>
 
-                                        <tr>
-                                            <td><a href="#">Blue utility pinafore denimdress</a></td>
-                                            <td>$76,00</td>
-                                        </tr>
+                                        
+                                        <% }); %>
                                         <tr class="summary-subtotal">
                                             <td>Subtotal:</td>
-                                            <td>$160.00</td>
+                                            <td></td>
+                                            <td>₹<%= cart[0].grandTotal %></td>
                                         </tr><!-- End .summary-subtotal -->
                                         <tr>
                                             <td>Shipping:</td>
+                                            <td></td>
                                             <td>Free shipping</td>
                                         </tr>
                                         <tr class="summary-total">
                                             <td>Total:</td>
-                                            <td>$160.00</td>
+                                            <td></td>
+                                            <td>₹<%= cart[0].grandTotal %></td>
                                         </tr><!-- End .summary-total -->
                                     </tbody>
                                 </table><!-- End .table table-summary -->
 
                                 <div class="accordion-summary" id="accordion-payment">
-                                    <div class="card">
-                                        <div class="card-header" id="heading-1">
-                                            <h2 class="card-title">
-                                                <a role="button" data-toggle="collapse" href="#collapse-1" aria-expanded="true" aria-controls="collapse-1">
-                                                    Direct bank transfer
-                                                </a>
-                                            </h2>
-                                        </div><!-- End .card-header -->
-                                        <div id="collapse-1" class="collapse show" aria-labelledby="heading-1" data-parent="#accordion-payment">
-                                            <div class="card-body">
-                                                Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order will not be shipped until the funds have cleared in our account.
-                                            </div><!-- End .card-body -->
-                                        </div><!-- End .collapse -->
-                                    </div><!-- End .card -->
-
-                                    <div class="card">
-                                        <div class="card-header" id="heading-2">
-                                            <h2 class="card-title">
-                                                <a class="collapsed" role="button" data-toggle="collapse" href="#collapse-2" aria-expanded="false" aria-controls="collapse-2">
-                                                    Check payments
-                                                </a>
-                                            </h2>
-                                        </div><!-- End .card-header -->
-                                        <div id="collapse-2" class="collapse" aria-labelledby="heading-2" data-parent="#accordion-payment">
-                                            <div class="card-body">
-                                                Ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. 
-                                            </div><!-- End .card-body -->
-                                        </div><!-- End .collapse -->
-                                    </div><!-- End .card -->
-
+                        
                                     <div class="card">
                                         <div class="card-header" id="heading-3">
                                             <h2 class="card-title">
@@ -138,10 +112,10 @@
                                         <div class="card-header" id="heading-4">
                                             <h2 class="card-title">
                                                 <a class="collapsed" role="button" data-toggle="collapse" href="#collapse-4" aria-expanded="false" aria-controls="collapse-4">
-                                                    PayPal <small class="float-right paypal-link">What is PayPal?</small>
+                                                    Wallet
                                                 </a>
                                             </h2>
-                                        </div><!-- End .card-header -->
+                                        </div> <!-- End .card-header -->
                                         <div id="collapse-4" class="collapse" aria-labelledby="heading-4" data-parent="#accordion-payment">
                                             <div class="card-body">
                                                 Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum.
@@ -153,11 +127,11 @@
                                         <div class="card-header" id="heading-5">
                                             <h2 class="card-title">
                                                 <a class="collapsed" role="button" data-toggle="collapse" href="#collapse-5" aria-expanded="false" aria-controls="collapse-5">
-                                                    Credit Card (Stripe)
+                                                    Online Payment
                                                     <img src="assets/images/payments-summary.png" alt="payments cards">
                                                 </a>
                                             </h2>
-                                        </div><!-- End .card-header -->
+                                        </div> <!--End .card-header -->
                                         <div id="collapse-5" class="collapse" aria-labelledby="heading-5" data-parent="#accordion-payment">
                                             <div class="card-body"> Donec nec justo eget felis facilisis fermentum.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Lorem ipsum dolor sit ame.
                                             </div><!-- End .card-body -->
@@ -165,12 +139,12 @@
                                     </div><!-- End .card -->
                                 </div><!-- End .accordion -->
 
-                                <button type="submit" class="btn btn-outline-primary-2 btn-order btn-block">
+                                <button type="button" class="btn btn-outline-primary-2 btn-order btn-block" onclick="placeclick()">
                                     <span class="btn-text">Place Order</span>
                                     <span class="btn-hover-text">Proceed to Checkout</span>
                                 </button>
                             </div><!-- End .summary -->
-                        </aside><!-- End .col-lg-3 -->
+                        </aside><!-- End .col-lg-4 -->
                     </div><!-- End .row -->
                 </form>
             </div><!-- End .container -->
@@ -185,6 +159,43 @@
 
 
 <%- include('../layout/mobile.ejs') %>
+
+<script>
+    function placeclick() {
+       console.log('inside')
+        // Get the selected address ID
+        var selectedAddressId = document.querySelector('input[name="address"]:checked').value;
+
+        
+        var paymentMethod = 'COD'; 
+        
+        var data = {
+            addressId: selectedAddressId,
+            paymentMethod: paymentMethod
+        };
+        console.log(data);
+
+        fetch('/order-placed', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data)
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(data => {
+            window.location.href="/"
+        })
+        .catch(error => {
+            console.error('There was a problem with your fetch operation:', error);
+        });
+    };
+</script>
 
  <!-- Plugins JS File -->
  <script src="assets/js/jquery.min.js"></script>
