--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -27,14 +27,14 @@
                                 <a class="nav-link active" id="tab-dashboard-link" data-toggle="tab" href="#tab-dashboard" role="tab" aria-controls="tab-dashboard" aria-selected="true">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="tab-orders-link" data-toggle="tab" href="#tab-orders" role="tab" aria-controls="tab-orders" aria-selected="false">Orders</a>
+                                <a class="nav-link"  href="/orders" >Orders</a>
                             </li>
                             
                             <li class="nav-item">
-                                <a class="nav-link" href="/address" role="tab"  aria-selected="false">Adresses</a>
+                                <a class="nav-link" href="/address" >Adresses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="tab-account-link" data-toggle="tab" href="#tab-account" role="tab" aria-controls="tab-account" aria-selected="false">Wallet</a>
+                                <a class="nav-link"  href="#tab-account" >Wallet</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/logout">Sign Out</a>
