--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -29,7 +29,7 @@
                             <a class="nav-link " href="/profile" role="tab" >Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="" role="tab" >Orders</a>
+                            <a class="nav-link" href="/orders" role="tab" >Orders</a>
                         </li>
                         
                         <li class="nav-item">
@@ -95,33 +95,33 @@
                                         <div class="modal-body">
                                         <form id="addAddressForm" action="/address" method="POST" onsubmit="return validate()">
                                             <div class="form-group">
-                                            <label for="buildingName">Building Name</label>
-                                            <input type="text" class="form-control" id="buildingName" name="buildingName">
-                                            <div id="buildingNameError" class="text-danger"></div>
+                                                <label for="buildingName">Building Name</label>
+                                                <input type="text" class="form-control" id="buildingName" name="buildingName">
+                                                <div id="buildingNameError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
-                                            <label for="mobile">Mobile</label>
-                                            <input type="text" class="form-control" id="mobile" name="mobile">
-                                            <div id="mobilenoError" class="text-danger"></div>
+                                                <label for="mobile">Mobile</label>
+                                                <input type="text" class="form-control" id="mobile" name="mobile">
+                                                <div id="mobilenoError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
-                                            <label for="district">District</label>
-                                            <input type="text" class="form-control" id="district" name="district">
-                                            <div id="districtError" class="text-danger"></div>
+                                                <label for="district">District</label>
+                                                <input type="text" class="form-control" id="district" name="district">
+                                                <div id="districtError" class="text-danger"></div>
                                             </div>
-                                            <div class="form-group">
-                                            <label for="city">City</label>
-                                            <input type="text" class="form-control" id="city" name="city">
+                                                <div class="form-group">
+                                                <label for="city">City</label>
+                                                <input type="text" class="form-control" id="city" name="city">
                                             <div id="cityError" class="text-danger"></div>
                                             </div>
-                                            <div class="form-group">
-                                            <label for="state">State</label>
-                                            <input type="text" class="form-control" id="state" name="state">
-                                            <div id="stateError" class="text-danger"></div>
+                                                <div class="form-group">
+                                                <label for="state">State</label>
+                                                <input type="text" class="form-control" id="state" name="state">
+                                                <div id="stateError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
-                                            <label for="pincode">Pincode</label>
-                                            <input type="text" class="form-control" id="pincode" name="pincode">
+                                                <label for="pincode">Pincode</label>
+                                                <input type="text" class="form-control" id="pincode" name="pincode">
                                             <div id="pincodeError" class="text-danger"></div>
                                             </div>
                                             <button type="submit" class="btn btn-primary">Add Address</button>
