--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -1,4 +1,149 @@
-<div class="tab-pane fade" id="tab-orders" role="tabpanel" aria-labelledby="tab-orders-link">
-    <p>No order has been made yet.</p>
-    <a href="category.html" class="btn btn-outline-primary-2"><span>GO SHOP</span><i class="icon-long-arrow-right"></i></a>
-</div><!-- .End .tab-pane -->
+<%- include('../layout/header.ejs') %>
+
+<%- include('../layout/navbar.ejs') %>
+
+
+<main class="main">
+    <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
+        <div class="container">
+            <h1 class="page-title">My Account</h1>
+        </div><!-- End .container -->
+    </div><!-- End .page-header -->
+    <nav aria-label="breadcrumb" class="breadcrumb-nav mb-3">
+        <div class="container">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="/profile">Profile</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Orders</li>
+            </ol>
+        </div><!-- End .container -->
+    </nav><!-- End .breadcrumb-nav -->
+
+<div class="page-content">
+    <div class="dashboard">
+        <div class="container">
+            <div class="row">
+                <aside class="col-md-4 col-lg-3">
+                    <ul class="nav nav-dashboard flex-column mb-3 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link " href="/profile"  >Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/orders">Orders</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link "   href="/address"  >Adresses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"  href="" >Wallet</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Sign Out</a>
+                        </li>
+                    </ul>
+                </aside><!-- End .col-lg-3 -->
+                <div class=" col-lg-9 col-lg-8 ">
+                    <% if(orders && orders.length > 0) { %> 
+                    <div class="tab-content">
+                        <div class="" >
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th style="text-align: center;">Product</th>
+                                        <th style="text-align: center;">Quantity</th>
+                                        <th style="text-align: center;">Address</th>
+                                        <th style="text-align: center;">Price</th>
+                                        <th style="text-align: center;">Order Status</th>
+                                        <th style="text-align: center;">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% orders.forEach(order => { %>
+                                    <% order.products.forEach(product => { %>
+                                        <tr>
+                                            <td class="product-col">
+                                                <div class="product">
+                                                    <figure class="product-media">
+                                                        <% if (product.images && product.images.length > 0) { %>
+                                                            <img src="<%= product.images[0] %>" alt="Product image">
+                                                        <% } %>
+                                                    </figure>
+                                                    <h3 class="product-title">
+                                                        <%= product.name %>
+                                                    </h3>
+                                                </div>
+                                            </td>
+                                            <td class="quantity-col" style="text-align: center;"><%= product.quantity %></td>
+                                            <td style="text-align: center;" >
+                                                <p>
+                                                    <%= order.address.user.name %>
+                                                    <br>
+                                                    <%= order.address.buildingName %>
+                                                    <br>
+                                                    <%= order.address.mobile %>
+                                                    <br>
+                                                    <%= order.address.city %>
+                                                    <br>
+                                                    <%= order.address.district %>
+                                                    <br>
+                                                    <%= order.address.state %>
+                                                    <br>
+                                                    <%= order.address.pincode %>
+                                                </p>
+                                            </td>
+                                            <td class="price-col" style="text-align: center;">₹<%= product.subtotal %></td>
+                                            <% if(product.orderStatus == 'placed') { %>
+                                                <td  style="text-align: center; color: blue;"><%= product.orderStatus %></td>
+                                            <% }else if(product.orderStatus == 'shipped') { %>
+                                                <td  style="text-align: center; color: blue;"><%= product.orderStatus %></td>
+                                            <% }else if(product.orderStatus == 'delivered') { %> 
+                                                <td  style="text-align: center; color: rgb(13, 197, 13);"><%= product.orderStatus %></td>
+                                            <% }else { %> 
+                                                <td  style="text-align: center; color: red;"><%= product.orderStatus %></td>
+                                            <% } %>   
+                                            <td class="action-column" style="text-align: center;">
+                                                <button class="btn-primary">Cancell</button>
+                                            </td>
+                                        </tr>
+                                    <% }) %>
+                                    <% }) %>
+                                </tbody>
+                            </table>
+                            
+                        </div>
+                    </div><!-- .End .tab-pane -->   
+                    <% }else {%>
+                        <h3 class="text-primary text-center ">No Orders</h3>
+                        <button class="btn-primary text-centerk"><a class="text-white" href="/all-products">Order new product</a></button>
+                    <% } %> 
+                </div>    
+
+
+            </div>
+        </div>      
+    </div>
+</div>     
+</main>
+
+
+
+<%- include('../layout/allfooter.ejs') %>
+</div><!-- End .page-wrapper -->
+<button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
+
+
+<%- include('../layout/mobile.ejs') %>
+
+
+<!-- Plugins JS File -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/jquery.hoverIntent.min.js"></script>
+<script src="assets/js/jquery.waypoints.min.js"></script>
+<script src="assets/js/superfish.min.js"></script>
+<script src="assets/js/owl.carousel.min.js"></script>
+<!-- Main JS File -->
+<script src="assets/js/main.js"></script>
+
+<%- include('../layout/footer.ejs') %>
