--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -189,7 +189,7 @@
             return response.json();
         })
         .then(data => {
-            window.location.href="/"
+            window.location.href="/thank-you"
         })
         .catch(error => {
             console.error('There was a problem with your fetch operation:', error);
