--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -184,13 +184,13 @@
                    
                     <div class="form-group">
                         <label for="singin-email">Username or Email address *</label>
-                        <input type="text" class="form-control" id="singin-email" name="email" value="sabeeh123@gmail.com" required>
+                        <input type="text" class="form-control" id="singin-email" name="email"  required>
                         <small id="emailError" class="text-danger"></small>
                     </div><!-- End .form-group -->
     
                     <div class="form-group">
                         <label for="singin-password">Password *</label>
-                        <input type="password" class="form-control" id="singin-password" name="password" value="Sabeeh@123" required>
+                        <input type="password" class="form-control" id="singin-password" name="password"  required>
                         <small id="passwordError" class="text-danger"></small>
                     </div><!-- End .form-group -->
                     <% 
