--- a/views/users/thankyou.ejs
+++ b/views/users/thankyou.ejs
@@ -2,9 +2,12 @@
 
 <%- include('../layout/navbar.ejs') %>
 
-<div class="w-75">
-    <div>
-        <img src="/assets/images/Thankyou.jpg" alt="Thank For Purchasing">
+<div class="w-75  d-flex" style="justify-content: center; margin-left: 100px;">
+    <div class=" mt-5 mb-5" style="background-image: url('assets/images/Thankyou.jpg');">
+        <img src="/assets/images/Thankyou.jpg" alt="Thankyou For Purchasing">
+        <button class="btn-dark" style="margin-left: 40%;"><a class="text-white" href="/orders">Visit Orders</a></button>
+       <button class="btn-dark"> <a class="text-white" href="/">Back To Home</a></button>
+        
     </div>
     
 </div>
