--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -32,9 +32,11 @@
                                 <label for="sortby">Sort by:</label>
                                 <div class="select-custom">
                                     <select name="sortby" id="sortby" class="form-control">
-                                        <option value="popularity" selected="selected">Most Popular</option>
-                                        <option value="rating">Most Rated</option>
-                                        <option value="date">Date</option>
+                                        <option value="price_asc" selected="selected">Price: low to high</option>
+                                        <option value="price_desc">Price: high to low</option>
+                                        <option value="az">aA - zZ</option>
+                                        <option value="za">zZ - aA</option>
+
                                     </select>
                                 </div>
                             </div><!-- End .toolbox-sort -->
@@ -42,14 +44,16 @@
                         </div><!-- End .toolbox-right -->
                     </div><!-- End .toolbox -->
 
-                    <div class="products mb-3">
+                    <div class="products mb-3" id="product-list">
                         <div class="row justify-content-center">
                             <% products.forEach(product => { %>
                                 <div class="col-6 col-md-4 col-lg-4">
                                     <div class="product product-7 text-center">
                                         <figure class="product-media">
                                             <% if (product.status === 'active') { %>
-                                                <!-- <span class="product-label label-new">New</span> -->
+                                                <% if(product.quantity === 0) { %> 
+                                                    <span class="product-label label-out">Out of Stock</span>
+                                                <% } %>
                                                 <a href="/product/<%= product._id %>">
                                                     <img src="<%=product.pictures[0] %>" alt="Product image" class="product-image">
                                                 </a>
@@ -58,10 +62,12 @@
                                                     <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
                                                     <!-- <a href="" class="btn-product-icon btn-quickview" title="Quick view"><span>Quick view</span></a> -->
                                                 </div><!-- End .product-action-vertical -->
-                    
+                                                
+                                                <% if(product.quantity !== 0) { %> 
                                                 <div class="product-action">
                                                     <a href="/cart-Products/<%= product._id %>" class="btn-product btn-cart"><span>add to cart</span></a>
                                                 </div><!-- End .product-action -->
+                                                <% } %>
                                             <% } else { %>
                                                 <p>This product is not available</p>
                                             <% } %>
@@ -140,183 +146,23 @@
                             <div class="collapse show" id="widget-1">
                                 <div class="widget-body">
                                     <div class="filter-items filter-items-count">
-                                        <% categories.forEach(category => { %>
+                                        
                                             <div class="filter-item">
                                                 <div class="custom-control custom-checkbox">
-                                                    <input type="checkbox" class="custom-control-input" id="cat-1">
-                                                    <label class="custom-control-label" for="cat-1"><%= category.name %></label>
-                                                </div><!-- End .custom-checkbox -->
+                                                    <a class="text-muted" href="/all-products">All</a>
+                                                <% categories.forEach(category => { %>
+                                                <div class="">
+                                                    <!-- <input type="checkbox" class=""> -->
+                                                    <a class="text-muted" href="/filter-category/<%= category._id %>"><%= category.name %></a>
+                                                </div>
                                                 <!-- <span class="item-count">3</span> -->
+                                                <% }) %>
+                                                </div><!-- End .custom-checkbox -->
                                             </div><!-- End .filter-item -->
-                                       <% }) %>
                                     </div><!-- End .filter-items -->
                                 </div><!-- End .widget-body -->
                             </div><!-- End .collapse -->
                         </div><!-- End .widget -->
-
-                        <!-- <div class="widget widget-collapsible">
-                            <h3 class="widget-title">
-                                <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true" aria-controls="widget-2">
-                                    Size
-                                </a>
-                            </h3> End .widget-title 
-
-                            <div class="collapse show" id="widget-2">
-                                <div class="widget-body">
-                                    <div class="filter-items">
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="size-1">
-                                                <label class="custom-control-label" for="size-1">XS</label>
-                                            </div> End .custom-checkbox 
-                                        </div> End .filter-item
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="size-2">
-                                                <label class="custom-control-label" for="size-2">S</label>
-                                            </div> End .custom-checkbox
-                                        </div> End .filter-item 
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" checked id="size-3">
-                                                <label class="custom-control-label" for="size-3">M</label>
-                                            </div> End .custom-checkbox 
-                                        </div>End .filter-item 
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" checked id="size-4">
-                                                <label class="custom-control-label" for="size-4">L</label>
-                                            </div> End .custom-checkbox 
-                                        </div> End .filter-item 
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="size-5">
-                                                <label class="custom-control-label" for="size-5">XL</label>
-                                            </div> End .custom-checkbox 
-                                        </div> End .filter-item 
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="size-6">
-                                                <label class="custom-control-label" for="size-6">XXL</label>
-                                            </div> End .custom-checkbox 
-                                        </div> End .filter-item 
-                                    </div>End .filter-items 
-                                </div> End .widget-body 
-                            </div> End .collapse 
-                        </div>End .widget -->
-
-                        <!-- <div class="widget widget-collapsible">
-                            <h3 class="widget-title">
-                                <a data-toggle="collapse" href="#widget-3" role="button" aria-expanded="true" aria-controls="widget-3">
-                                    Colour
-                                </a>
-                            </h3> End .widget-title 
-
-                             <div class="collapse show" id="widget-3">
-                                <div class="widget-body">
-                                    <div class="filter-colors">
-                                        <a href="#" style="background: #b87145;"><span class="sr-only">Color Name</span></a>
-                                        <a href="#" style="background: #f0c04a;"><span class="sr-only">Color Name</span></a>
-                                        <a href="#" style="background: #333333;"><span class="sr-only">Color Name</span></a>
-                                        <a href="#" class="selected" style="background: #cc3333;"><span class="sr-only">Color Name</span></a>
-                                        <a href="#" style="background: #3399cc;"><span class="sr-only">Color Name</span></a>
-                                        <a href="#" style="background: #669933;"><span class="sr-only">Color Name</span></a>
-                                        <a href="#" style="background: #f2719c;"><span class="sr-only">Color Name</span></a>
-                                        <a href="#" style="background: #ebebeb;"><span class="sr-only">Color Name</span></a>
-                                    </div> End .filter-colors 
-                                </div> End .widget-body 
-                            </div>End .collapse
-                        </div>End .widget -->
-
-                        <!-- <div class="widget widget-collapsible">
-                            <h3 class="widget-title">
-                                <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="true" aria-controls="widget-4">
-                                    Brand
-                                </a>
-                            </h3>End .widget-title
-
-                            <div class="collapse show" id="widget-4">
-                                <div class="widget-body">
-                                    <div class="filter-items">
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="brand-1">
-                                                <label class="custom-control-label" for="brand-1">Next</label>
-                                            </div>End .custom-checkbox
-                                        </div>End .filter-item
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="brand-2">
-                                                <label class="custom-control-label" for="brand-2">River Island</label>
-                                            </div>End .custom-checkbox
-                                        </div>End .filter-item
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="brand-3">
-                                                <label class="custom-control-label" for="brand-3">Geox</label>
-                                            </div>End .custom-checkbox
-                                        </div>End .filter-item
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="brand-4">
-                                                <label class="custom-control-label" for="brand-4">New Balance</label>
-                                            </div>End .custom-checkbox
-                                        </div>End .filter-item
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="brand-5">
-                                                <label class="custom-control-label" for="brand-5">UGG</label>
-                                            </div>End .custom-checkbox
-                                        </div>End .filter-item
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="brand-6">
-                                                <label class="custom-control-label" for="brand-6">F&F</label>
-                                            </div>End .custom-checkbox
-                                        </div>End .filter-item
-
-                                        <div class="filter-item">
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="brand-7">
-                                                <label class="custom-control-label" for="brand-7">Nike</label>
-                                            </div>End .custom-checkbox
-                                        </div>End .filter-item
-
-                                    </div>End .filter-items
-                                </div>End .widget-body
-                            </div>End .collapse
-                        </div>End .widget -->
-<!-- 
-                        <div class="widget widget-collapsible">
-                            <h3 class="widget-title">
-                                <a data-toggle="collapse" href="#widget-5" role="button" aria-expanded="true" aria-controls="widget-5">
-                                    Price
-                                </a>
-                            </h3> End .widget-title
-
-                            <div class="collapse show" id="widget-5">
-                                <div class="widget-body">
-                                    <div class="filter-price">
-                                        <div class="filter-price-text">
-                                            Price Range:
-                                            <span id="filter-price-range"></span>
-                                         </div> End .filter-price-text 
-
-                                         <div id="price-slider"></div>End #price-slider 
-                                    </div> End .filter-price 
-                                </div> End .widget-body 
-                            </div> End .collapse 
-                        </div>End .widget -->
                     </div><!-- End .sidebar sidebar-shop -->
                 </aside><!-- End .col-lg-3 -->
             </div><!-- End .row -->
