--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -52,7 +52,7 @@
                                             <td class="price-col">₹<%= product.product.discount %></td>
                                             <td class="quantity-col">
                                                 <div class="cart-product-quantity">
-                                                    <input type="number" class="form-control quantity-input" value="<%= product.quantity %>" data-product-id="<%= product.product._id %>" name="quantity" min="1" max="<%= product.product.quantity %>" step="1" data-decimals="0" required>
+                                                    <input type="number" class="form-control quantity-input" value="<%= product.quantity %>" data-product-id="<%= product.product._id %>" name="quantity" min="1" max="10" step="1" data-decimals="0" required>
                                                 </div>
                                             </td>
                                             <td class="total-col">₹<%= product.subtotal %></td>
