--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -21,7 +21,7 @@
                                 <h3 class="intro-subtitle text-primary">SEASONAL PICKS</h3><!-- End .h3 intro-subtitle -->
                                 <h1 class="intro-title">Get All <br>The Good Stuff</h1><!-- End .intro-title -->
     
-                                <a href="category.html" class="btn btn-outline-primary-2">
+                                <a href="/all-products" class="btn btn-outline-primary-2">
                                     <span>DISCOVER MORE</span>
                                     <i class="icon-long-arrow-right"></i>
                                 </a>
@@ -128,7 +128,7 @@
 
                 			<div class="banner-content banner-content-center">
                 				<h3 class="banner-title text-white"><a href="#">ArmChairs</a></h3><!-- End .banner-title -->
-                				<a href="#" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                				<a href="/filter-category/65dda3e448d65827a9b90a04" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                 			</div><!-- End .banner-content -->
             			</div><!-- End .banner -->
         			</div><!-- End .col-sm-6 col-lg-3 -->
@@ -140,7 +140,7 @@
 
                 			<div class="banner-content banner-content-center">
                 				<h3 class="banner-title text-white"><a href="#">Desk Chairs</a></h3><!-- End .banner-title -->
-                				<a href="#" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                				<a href="/filter-category/65e5a9529c5280a8d0604373" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                 			</div><!-- End .banner-content -->
             			</div><!-- End .banner -->
         			</div><!-- End .col-sm-6 col-lg-3 -->
@@ -153,7 +153,7 @@
 
                     			<div class="banner-content banner-content-center">
                     				<h3 class="banner-title text-white"><a href="#">Out Door Chairs</a></h3><!-- End .banner-title -->
-                    				<a href="#" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                    				<a href="/filter-category/65e5afc79c5280a8d06043a4" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                     			</div><!-- End .banner-content -->
                 			</div><!-- End .banner -->
 
@@ -164,7 +164,7 @@
 
                     			<div class="banner-content banner-content-center">
                     				<h3 class="banner-title text-white"><a href="#">Bean Bags</a></h3><!-- End .banner-title -->
-                    				<a href="#" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                    				<a href="/filter-category/65e081b356a68498179cece9" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                     			</div><!-- End .banner-content -->
                 			</div><!-- End .banner -->
                         </div>
@@ -280,7 +280,7 @@
                             <div class="row no-gutters flex-column flex-sm-row align-items-sm-center">
                                 <div class="col">
                                     <h3 class="cta-title text-white">Sign Up & Get 10% Off</h3><!-- End .cta-title -->
-                                    <p class="cta-desc text-white">Molla presents the best in interior design</p><!-- End .cta-desc -->
+                                    <p class="cta-desc text-white">FurniHub presents the best in interior design</p><!-- End .cta-desc -->
                                 </div><!-- End .col -->
 
                                 <div class="col-auto">
