--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -86,14 +86,20 @@
                                 </div>
                             </div><!-- End .details-filter-row -->
                            
-                            <div class="product-details-action">
-                                <a href="/cart-Products/<%= product._id %>" class="btn-product btn-cart"><span>add to cart</span></a>
-
-                                <div class="details-action-wrapper">
-                                    <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
-                                </div><!-- End .details-action-wrapper -->
-                            </div><!-- End .product-details-action -->
-
+                            <% if (product.quantity === 0) { %>
+                                <div class="product-details-action">
+                                    <button style="border: none; background-color: #ccc; color: #666; padding: 8px 16px; border-radius: 4px; cursor: not-allowed;">Out of Stock</button>
+                                </div>
+                            <% } else { %>
+                                <div class="product-details-action">
+                                    <a href="/cart-Products/<%= product._id %>" class="btn-product btn-cart"><span>add to cart</span></a>
+    
+                                    <div class="details-action-wrapper">
+                                        <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
+                                    </div><!-- End .details-action-wrapper -->
+                                </div><!-- End .product-details-action -->
+                            <% } %>
+                           
 
                             <div class="product-details-footer">
                                 <div class="product-cat">
