--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -86,14 +86,16 @@
                                         </button>
                                         </div>
                                         <div class="modal-body">
-                                        <form action="/profile/<%= user._id %>" method="post" id="editProfileForm">
+                                        <form action="/profile/<%= user._id %>" method="post" id="editProfileForm" onsubmit="return validateProfile()">
                                             <div class="form-group">
-                                            <label for="editName">Name</label>
+                                            <label for="editName" class="pl-3">Name</label>
                                             <input type="text" name="name" class="form-control" id="editName" value="<%= user.name %>">
+                                            <small id="nameError" class="text-danger"></small>
                                             </div>
                                             <div class="form-group">
-                                                <label for="editEmail">Mobile No</label>
-                                                <input type="text" name="mobile" class="form-control" id="editEmail" value="<%= user.mobile %>">
+                                                <label for="editEmail" class="pl-3">Mobile No</label>
+                                                <input type="text" name="mobile" class="form-control" id="editMobile" value="<%= user.mobile %>">
+                                                <small id="mobilenoError" class="text-danger"></small>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -119,18 +121,18 @@
                                             <div class="modal-body">
                                                 <form action="/profile" method="post" id="changePasswordForm" onsubmit="return validate()">
                                                     <div class="form-group">
-                                                        <label for="currentPassword">Current Password</label>
+                                                        <label for="currentPassword" class="pl-3">Current Password</label>
                                                         <input type="password" name="currentPassword" class="form-control" id="currentPassword" placeholder="Enter current password" >
                                                         <small><%= message %></small>
                                                         <small id="currentPasswordError" class="text-danger"></small>
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="newPassword">New Password</label>
+                                                        <label for="newPassword" class="pl-3" >New Password</label>
                                                         <input type="password" name="newPassword" class="form-control" id="newPassword" placeholder="Enter new password" >
                                                         <small id="newPasswordError" class="text-danger"></small>
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="confirmPassword">Confirm New Password</label>
+                                                        <label for="confirmPassword" class="pl-3" >Confirm New Password</label>
                                                         <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" placeholder="Confirm new password" >
                                                         <small id="confirmPasswordError" class="text-danger"></small>
                                                         
@@ -184,9 +186,9 @@
         }
 
         if (!/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$/.test(newPassword)) {
-                newPasswordError.textContent = 'Password must be at least 6 characters and include at least one uppercase letter, one lowercase letter, one number, and one special character.';
-                isValid = false;
-            }
+            newPasswordError.textContent = 'Password must be at least 6 characters and include at least one uppercase letter, one lowercase letter, one number, and one special character.';
+            isValid = false;
+        }
 
         if(newPassword !== confirmPassword) {
             confirmPasswordError.textContent = 'Password do not match.';
@@ -196,6 +198,37 @@
        
         return isValid;
 
+    }
+</script>
+
+<script>
+    function validateProfile() {
+        let name = document.getElementById('editName').value.trim();
+        let mobile = document.getElementById('editMobile').value.trim();
+
+        let nameError = document.getElementById('nameError');
+        let mobilenoError = document.getElementBy('mobilenoError');
+
+        nameError.textContent = '';
+        mobilenoError.textContent = '';
+
+        function isOnlyLetters(str) {
+            return /^[a-zA-Z\s]+$/.test(str);
+        }
+       
+
+        if(name.length < 2 || !isOnlyLetters(name)){
+            nameError.textContent = 'Plese Enter Your Name.'
+            return false;
+        }
+
+        if(!/^\d{10}$/.test(mobile)){
+            mobilenoError.textContent = 'Please enter a valid 10-digit mobile number.'
+            return false;
+        }
+
+        // Form is valied
+        return true
     }
 </script>
 
