start all code format

--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -49,7 +49,7 @@
 
             <div class="container">
                 <div class="heading heading-center mb-3">
-                    <h2 class="title-lg underline">Trendy Products</h2><!-- End .title -->
+                    <h2 class="title-lg underline">Latest Products</h2><!-- End .title -->
                 </div><!-- End .heading -->
 
                 <div class="tab-content tab-content-carousel">
