--- a/views/layout/allfooter.ejs
+++ b/views/layout/allfooter.ejs
@@ -22,7 +22,7 @@
                         <h4 class="widget-title">Useful Links</h4><!-- End .widget-title -->
 
                         <ul class="widget-list">
-                            <li><a href="about.html">About FurniHub</a></li>
+                            <li><a href="/about">About FurniHub</a></li>
                             <li><a href="#">How to shop on FurniHub</a></li>
                             <li><a href="contact.html">Contact us</a></li>
                             <li><a href="login.html">Log in</a></li>
