--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -133,7 +133,7 @@
                     <div class="sidebar sidebar-shop">
                         <div class="widget widget-clean">
                             <label>Filters:</label>
-                            <a href="#" class="sidebar-filter-clear">Clean All</a>
+                            <a href="/all-products" class="sidebar-filter-clear">Clean All</a>
                         </div><!-- End .widget widget-clean -->
 
                         <div class="widget widget-collapsible">
