--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -59,37 +59,37 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <% orders.forEach(order => { %>
-                                    <% order.products.forEach(product => { %>
+                                    <% orders?.forEach(order => { %>
+                                    <% order?.products.forEach(product => { %>
                                         <tr>
                                             <td class="product-col">
                                                 <div class="product">
                                                     <figure class="product-media">
-                                                        <% if (product.images && product.images.length > 0) { %>
+                                                        <% if (product?.images && product.images.length > 0) { %>
                                                             <img src="<%= product.images[0] %>" alt="Product image">
                                                         <% } %>
                                                     </figure>
                                                     <h3 class="product-title">
-                                                        <%= product.name %>
+                                                        <%= product?.name %>
                                                     </h3>
                                                 </div>
                                             </td>
                                             <td class="quantity-col" style="text-align: center;"><%= product.quantity %></td>
                                             <td style="text-align: center;" >
                                                 <p>
-                                                    <%= order.address.user.name %>
+                                                    <%= order?.address.user.name %>
                                                     <br>
-                                                    <%= order.address.buildingName %>
+                                                    <%= order?.address.buildingName %>
                                                     <br>
-                                                    <%= order.address.mobile %>
+                                                    <%= order?.address.mobile %>
                                                     <br>
-                                                    <%= order.address.city %>
+                                                    <%= order?.address.city %>
                                                     <br>
-                                                    <%= order.address.district %>
+                                                    <%= order?.address.district %>
                                                     <br>
-                                                    <%= order.address.state %>
+                                                    <%= order?.address.state %>
                                                     <br>
-                                                    <%= order.address.pincode %>
+                                                    <%= order?.address.pincode %>
                                                 </p>
                                             </td>
                                             <td class="price-col" style="text-align: center;">₹<%= product.subtotal %></td>
@@ -101,10 +101,12 @@
                                                 <td  style="text-align: center; color: rgb(13, 197, 13);"><%= product.orderStatus %></td>
                                             <% }else { %> 
                                                 <td  style="text-align: center; color: red;"><%= product.orderStatus %></td>
-                                            <% } %>   
-                                            <td class="action-column" style="text-align: center;">
-                                                <button class="btn-primary" style="border: none;">Cancell</button>
-                                            </td>
+                                            <% } %>  
+                                            <% if(product.orderStatus !== 'cancelled'){ %> 
+                                                <td class="action-column" style="text-align: center;">
+                                                    <button  class="btn-primary" style="border: none" onclick="cancelOrder('<%= order._id %>', '<%= product._id %>')">Cancel</button>
+                                                </td>
+                                            <% } %> 
                                         </tr>
                                     <% }) %>
                                     <% }) %>
@@ -135,8 +137,48 @@
 
 <%- include('../layout/mobile.ejs') %>
 
+<script>
+    function cancelOrder(orderId, productId) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: 'Do you really want to cancel this order?',
+            icon: 'warning',
+            input: 'text',
+            inputLabel: 'Reason for cancellation',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, cancel it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                const reason = result.value;
+    
+                fetch(`/orders/status`, {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        newStatus: 'cancelled',
+                        orderId,
+                        productId,
+                        reason, // Include the reason in the request
+                    }),
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        $('#tabletoload').load('/orders #tabletoload');
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                    });
+            }
+        });
+    }
+</script>
 
 <!-- Plugins JS File -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/jquery.hoverIntent.min.js"></script>
